# storage/api-docs/api-docs.json
@@ -512,19 +512,20 @@
                     "Authentication"
                 ],
                 "summary": "Request password reset for user",
-                "operationId": "d9ce8fb7eae3aad24d1bd83c1d0c297f",
+                "operationId": "a0fbbd9d94278341b4e0b65cf5b6d822",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "phone"
+                                    "email"
                                 ],
                                 "properties": {
-                                    "phone": {
+                                    "email": {
                                         "type": "string",
-                                        "example": "1234567890"
+                                        "format": "email",
+                                        "example": "user@example.com"
                                     }
                                 },
                                 "type": "object"
@@ -548,6 +549,9 @@
                                 }
                             }
                         }
+                    },
+                    "404": {
+                        "description": "Email not found"
                     },
                     "500": {
                         "description": "Server error"
@@ -604,6 +608,9 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Invalid OTP"
+                    },
                     "500": {
                         "description": "Server error"
                     }
@@ -623,33 +630,72 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "restaurant_name",
-                                    "phone",
+                                    "name",
+                                    "address",
+                                    "city",
+                                    "country",
+                                    "mobile",
+                                    "email",
                                     "password",
-                                    "working_hour",
-                                    "chosen_bank"
+                                    "opening_time",
+                                    "closing_time"
                                 ],
                                 "properties": {
-                                    "restaurant_name": {
+                                    "name": {
                                         "type": "string",
                                         "example": "Pizza Palace"
                                     },
-                                    "phone": {
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Best pizza in town"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "example": "123 Main Street"
+                                    },
+                                    "city": {
+                                        "type": "string",
+                                        "example": "New York"
+                                    },
+                                    "state": {
+                                        "type": "string",
+                                        "example": "NY"
+                                    },
+                                    "postal_code": {
+                                        "type": "string",
+                                        "example": "10001"
+                                    },
+                                    "country": {
+                                        "type": "string",
+                                        "example": "USA"
+                                    },
+                                    "mobile": {
                                         "type": "string",
                                         "example": "1234567890"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "restaurant@example.com"
                                     },
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "password123"
+                                        "example": "12345678"
                                     },
-                                    "working_hour": {
+                                    "website": {
                                         "type": "string",
-                                        "example": "9 AM - 9 PM"
+                                        "example": "https://pizzapalace.com"
                                     },
-                                    "chosen_bank": {
+                                    "opening_time": {
                                         "type": "string",
-                                        "example": "Bank of XYZ"
+                                        "format": "time",
+                                        "example": "09:00:00"
+                                    },
+                                    "closing_time": {
+                                        "type": "string",
+                                        "format": "time",
+                                        "example": "21:00:00"
                                     }
                                 },
                                 "type": "object"
@@ -667,7 +713,12 @@
                                         "token": {
                                             "type": "string"
                                         },
-                                        "restaurant": {}
+                                        "restaurant": {
+                                            "type": "object"
+                                        },
+                                        "user": {
+                                            "type": "object"
+                                        }
                                     },
                                     "type": "object"
                                 }
@@ -693,11 +744,11 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "phone",
+                                    "phone_or_email",
                                     "password"
                                 ],
                                 "properties": {
-                                    "phone": {
+                                    "phone_or_email": {
                                         "type": "string",
                                         "example": "1234567890"
                                     },
@@ -734,6 +785,40 @@
                     },
                     "500": {
                         "description": "Server error"
+                    }
+                }
+            }
+        },
+        "/api/banners/active": {
+            "get": {
+                "tags": [
+                    "Banners"
+                ],
+                "summary": "Fetch all active banners",
+                "description": "Retrieve a list of all active banners.",
+                "operationId": "fetchActiveBanners",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -1467,6 +1552,45 @@
                 }
             }
         },
+        "/api/restaurants/nearby": {
+            "get": {
+                "tags": [
+                    "Restaurants"
+                ],
+                "summary": "Get Nearby Restaurants by City",
+                "description": "Retrieve a list of all nearby restaurants based on the user's city.",
+                "operationId": "getNearbyRestaurantsByCity",
+                "parameters": [
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "The city to filter nearby restaurants",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/user/profile": {
             "get": {
                 "tags": [
@@ -1733,6 +1857,10 @@
             "description": "Authentication"
         },
         {
+            "name": "Banners",
+            "description": "Banners"
+        },
+        {
             "name": "Cart",
             "description": "Cart"
         },
@@ -1743,6 +1871,10 @@
         {
             "name": "Payment",
             "description": "Payment"
+        },
+        {
+            "name": "Restaurants",
+            "description": "Restaurants"
         }
     ]
 }
